--- a/src/App.css
+++ b/src/App.css
@@ -760,6 +760,8 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 16px;
+  width: 200px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1031,6 +1033,13 @@
   align-items: center;
 }
 
+/* weight option btns */
+
+  .weight-btn.active {
+    border-color: #f18901; /* Highlight active button */
+    background-color: #f0aa5a; /* Change background of active button */
+
+  }
 
 
 
@@ -1503,6 +1512,8 @@
  
   }
   
+
+
 
 
 
