--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,10 @@
 
   nav {
     background-color: #ce6301;
+    /* background-color: #dc661f; */
+
     border-bottom: 1px solid #ddd;
-    height: 110px;
+    height: 125px;
     width: 100%;
   }
   .nav-bar {
@@ -31,8 +33,8 @@
   .logo img {
     margin: 0 ;
     padding: 0 ;
-    width: 135px;
-    height: 109px;
+    width: 150px;
+    height: 122px;
     
   }
   
@@ -44,7 +46,7 @@
   .nav-links a, .search a {
     text-decoration: none;
     letter-spacing: 0.01em;
-    color: #ffffff;
+    color: white;
     font-weight: 700;
     transition: color 0.3s;
   }
@@ -1154,6 +1156,10 @@
   .recipe-detail p {
     font-size: 16px;
     line-height: 1.6;
+  }
+
+  .ingredient-link{
+    color: red;
   }
   
   
