--- a/src/App.css
+++ b/src/App.css
@@ -791,7 +791,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .product-card img {
@@ -799,6 +799,11 @@
   height: 180px;
   object-fit: cover;
   border-radius: 8px;
+}
+
+.product-card-title-heading{
+  text-align: center;
+  color: #c97b07;
 }
 
 .shoppg-heading{
@@ -1186,36 +1191,93 @@
   .ingredient-link{
     color: red;
   }
-
-  /* Single pg product display */
   
-  .expandable-section {
-    overflow: hidden;
-    transition: max-height 0.3s ease-in-out;
-    max-height: 0; /* Start with the section collapsed */
+  
+  /* singe pg display */
+  .single-product-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+    max-width: 1200px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
-  .expandable-section.open {
-    max-height: 1000px; /* Set a large enough value to ensure full expansion */
+  .single-product-img {
+    flex: 1;
+    padding: 20px;
   }
   
-  .expandable-content {
-    padding-left: 20px;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+  .single-product-img img {
+    width: 100%;
+    height: auto;
+    max-width: 400px;
+    object-fit: contain;
   }
   
-  .expandable-section.open .expandable-content {
-    opacity: 1;
+  .single-product-details {
+    flex: 1.5;
+    padding: 20px;
   }
   
-  .product-nutrition h3, .product-shelf-life h3 {
+  .single-product-details h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .single-product-details h4 {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .weight-options {
+    display: flex;
+    margin-bottom: 20px;
+  }
+  
+  .weight-btn {
+    padding: 10px 20px;
+    margin-right: 10px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
     cursor: pointer;
-    color: #007bff;
-    margin-top: 15px;
   }
   
+  .weight-btn.active {
+    color: white;
   
+  }
+  
+  .quantity-counter {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .quantity-counter button {
+    padding: 10px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    cursor: pointer;
+  }
+  
+  .quantity-counter input {
+    width: 50px;
+    text-align: center;
+    margin: 0 10px;
+    border: 1px solid #ccc;
+  }
+  
+  .add-to-cart-btn {
+    padding: 12px 20px;
+  
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
   
   
 
@@ -1423,7 +1485,8 @@
       padding: 2.5px 5px;
       margin: 2.5px;
       font-size: 0.8em;
-      font-weight: 390;
+      font-weight: 190;
+      
       
     }
     .quantity-selector {
