--- a/src/App.css
+++ b/src/App.css
@@ -1322,6 +1322,83 @@
   -webkit-appearance: none;
   margin: 0;
 }
+
+.accordion-item {
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.accordion-title {
+  background-color: #f4f4f4;
+  padding: 10px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.accordion-title:hover {
+  background-color: #e4e4e4;
+}
+
+.accordion-icon {
+  font-size: 18px;
+}
+
+.accordion-content {
+  padding: 10px;
+  border-top: 1px solid #ddd;
+}
+
+.product-additional-info {
+  margin-top: 20px;
+}
+
+.accordion-item {
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  overflow: hidden; /* Ensure the accordion content doesn't overflow */
+}
+
+.accordion-title {
+  background-color: #f4f4f4;
+  padding: 10px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.accordion-title:hover {
+  background-color: #e4e4e4;
+}
+
+.accordion-icon {
+  font-size: 18px;
+}
+
+.accordion-content {
+  max-height: 0px; /* Initially collapsed */
+  overflow: hidden;
+  transition: max-height 0.5s ease; /* Smooth opening/closing */
+  padding: 10px; /* Add padding for content readability */
+}
+
+.accordion-content p, .accordion-content ul {
+  margin: 0;
+}
+
+
   
 
 
