--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
   
 /* mini nav */
 .mini-nav {
-    background-color: #fafafa;
+    background-color: #ffffff;
     border-bottom: 1px solid #ddd;
     padding: 10px 20px 10px 20px;
     height: 50px;
