--- a/src/App.css
+++ b/src/App.css
@@ -343,6 +343,7 @@
   border: 1px solid #f08c65;
   padding: 5px 10px;
   margin: 5px;
+  color: #6b3d23;
   cursor: pointer;
   border-radius: 4px;
   font-weight: 600;
@@ -358,10 +359,13 @@
 .quantity-selector button {
   border: 1px solid #ccc;
   padding: 0px 15px;
+  height: 36px;
   cursor: pointer;
   border-radius: 4px;
-  color: white;
-  font-size: 1.4em; /* Adjust as necessary */
+  color: #c97b07;
+  font-size: 1.5em;
+  font-weight: bolder;
+  text-align: center; /* Adjust as necessary */
   /* background-color: #ffcca9;
   font-family: inherit; */
  } 
@@ -908,7 +912,6 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 16px;
-  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1604,7 +1607,7 @@
       margin: 0 ;
       width: 115px;
       height: 111px;
-      background-color: red;
+     
       margin-right: 25px;
       
     }
@@ -1807,7 +1810,7 @@
     }
     
   .weight-options button {
-      padding: 2.5px 5px;
+      padding: 5px 7px;
       margin: 2.5px;
       font-size: 0.8em;
       font-weight: 190;
@@ -1819,10 +1822,9 @@
     }
     
     .quantity-selector button {
-      background-color: #e65b50;
-      padding: 1px 9px;
-      border-radius: 2px;
-      font-size: 1.1em; /* Adjust as necessary */
+    
+      height: 30px;
+      font-size: 1.2em;
     
     }
 
@@ -1836,13 +1838,15 @@
     }
     
     .add-to-cart-btn {
-      padding: 4px 16px;
+      padding: 7px 20px;
       border-radius: 5px;
       cursor: pointer;
       font-size: 1rem; /* Adjust as necessary */
-      
     }
 
+    .add-to-cart-btn-grid{
+      padding: 7px 40px !important;
+    }
     /* recipes */
 
 
@@ -2027,9 +2031,12 @@
     /* Shop pg */
     .shoppg-container {
       display: flex; /* Use flexbox for mobile */
+      justify-content: center;
+      align-self: center;
       flex-direction: column; /* Stack elements vertically */
       padding: 10px; /* Reduce padding for smaller screens */
-      margin: 10px; /* Reduce margin for smaller screens */
+      margin: 5px; /* Reduce margin for smaller screens */
+     
     }
   
     .left-block-shoppg {
@@ -2038,26 +2045,48 @@
       justify-content: space-between; /* Space between filter and sort options */
       width: 100%; /* Full width on mobile */
       margin-bottom: 20px; /* Add space below filter/sort */
+      align-items: center;
+      
     }
   
     .Shop-Container {
       display: grid !important; /* Use grid layout for product cards */
       grid-template-columns: 1fr !important; /* 2 columns for product cards on mobile */
-      justify-self: center ;
-      gap: 0px; /* Gap between product cards */
+      justify-self: center ; /* Gap between product cards */
       width: 100%; /* Full width on mobile */
     }
   
     .product-card {
-      width: 65% !important; /* Full width of grid column */
+      width: 70% !important; /* Full width of grid column */
       max-width: none; /* Remove max-width constraint */
-      margin: 35px; /* Remove margin */
-      height: 430px !important;
+      margin: 50px; /* Remove margin */
+      height: 470px !important;
+      border: 1px solid rgba(221, 172, 117, 0.562);
+      margin-top: 30px !important;
     }
   
     .product-card img {
-      width: 100%; /* Full width of card */
-      height: 50%; /* Maintain aspect ratio */
+      width: 250px; /* Full width of card */
+      height: 240px; /* Maintain aspect ratio */
+    }
+
+    .weight-options-grid{
+      margin-top: 5px;
+      margin-bottom: 5px!important;
+      padding-bottom: 0;
+      padding: 0 20px;
+    }
+
+    .price-shop-grid{
+      font-size: 1.2em;
+      font-weight: 600;
+      margin-top: 5px;
+      margin-bottom: 0 !important;
+      padding-bottom:  0 !important;
+    }
+
+    .weight-btn-grid{
+      font-size: 1em !important;
     }
 
     .left-block-shoppg {
@@ -2067,6 +2096,7 @@
       align-items: center; /* Align items in the center vertically */
       gap: 10px; /* Reduce the gap on mobile */
       padding: 10px; /* Adjust padding for mobile view */
+
     }
   
     .left-block-shoppg h3 {
@@ -2147,3 +2177,6 @@
 
 
 
+
+
+  
